<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:background="@color/colorPinkRed">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/home_back_ef"
                android:padding="@dimen/_8sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/_42sdp"
                android:hint="@string/search_contact"
                android:singleLine="true"
                android:textColor="@color/colorWitheOpa"
                android:textColorHint="@color/black_hint"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toRightOf="@id/btn_back"
                app:layout_constraintRight_toLeftOf="@id/btn_option" />

            <ImageView
                android:id="@+id/btn_option"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:padding="@dimen/_14sdp"
                android:src="@drawable/ic_check_no_white"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_container"
            android:layout_below="@id/top_container"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingBottom="@dimen/_50sdp" />

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/btn_white_bg"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <Button
                android:textSize="@dimen/_12sdp"
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_white_bg"
                android:text="@string/done"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>
</layout>
