<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/layout_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:background="@color/colorPinkRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/home_back_ef"
                android:padding="@dimen/_8sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_done"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@drawable/home_back_ef"
                android:gravity="center"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_container"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/edt_background">

            <RelativeLayout
                android:id="@+id/layout_add_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp">


                <TextView
                    android:id="@+id/txt_send_to"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical"
                    android:text="@string/send_to"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_phone_number"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_toStartOf="@id/layout_contact"
                    android:layout_toEndOf="@id/txt_send_to"
                    android:background="@drawable/number_background"
                    android:ellipsize="end"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <RelativeLayout
                    android:id="@+id/layout_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_2sdp">

                    <ImageButton
                        android:id="@+id/btn_contact"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/contact_selector"
                        android:padding="@dimen/_4sdp" />

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/edt_phone_number"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_phone_number" />

                <TextView
                    android:id="@+id/txt_send_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_numbers"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/send_at"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_below="@id/txt_send_at"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="@dimen/_181sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_below="@id/txt_send_at"
                    android:layout_marginStart="@dimen/_28sdp"
                    android:layout_marginTop="11dp"
                    android:layout_toEndOf="@id/txt_time"
                    android:background="@drawable/number_background"
                    android:gravity="center_vertical"
                    android:hint="hh:mm"
                    android:paddingLeft="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView

                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_below="@id/txt_time"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="@dimen/_181sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_below="@id/time"
                    android:layout_marginLeft="@dimen/_19sdp"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:layout_toEndOf="@id/txt_date"
                    android:background="@drawable/number_background"
                    android:gravity="center_vertical"
                    android:hint="dd/MM/yyyy"
                    android:paddingLeft="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/txt_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_date"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/txt_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/content_background"
                    android:gravity="left"
                    android:minHeight="@dimen/_186sdp"
                    android:padding="@dimen/_8sdp"
                    android:focusableInTouchMode="true"
                    android:textSize="@dimen/_13sdp" />
            </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>
</layout>
